# cc-fastapi-learn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-admin-entrypoint.sh  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
config/: queues.yaml
config/templates/: github_webhook_prompt.j2  gitlab_webhook_prompt.j2  review_report_incremental_reconciliation_prompt.j2
docs/: workflows-and-database.md
examples/: demo_create_hello_world.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Pagination.tsx  RepositoryPage.tsx  ReviewDashboardPage.tsx  ReviewIssuesPage.tsx  ReviewWorkspace.tsx  WebhookPage.tsx  api.ts  bootstrap-theme.scss  main.tsx  styles.css  types.ts
src/cc_fastapi/: __init__.py  admin_client.py  cli.py  logging_setup.py  main.py
src/cc_fastapi/api/: dependencies.py  internal.py  providers.py  repositories.py  review_dashboard.py  review_issues.py  tasks.py  webhooks.py
src/cc_fastapi/core/: config.py  internal_tasks.py  queue_config.py  repository_values.py  webhook_payloads.py  (+1 more)
tests/: test_admin_cli.py  test_claude_client.py  test_config_database_url.py  test_db_migrations.py  test_docker_admin_entrypoint.py  test_providers_api.py  test_python_compatibility.py  test_queue_service.py  test_repositories_api.py  test_review_dashboard_api.py  test_review_issues_api.py  test_review_report_prompt_template.py  test_tasks_api.py  test_webhook_payloads.py  test_webhooks_api.py  test_worker_manager.py  test_workflow_engine.py
(+27 files in other folders)
