[project]
name = "cc-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "tolatolatop",email = "tolatolatop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.116.0,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "claude-agent-sdk>=0.1.44,<0.2.0",
    "pymysql>=1.1.1,<2.0.0",
    "pytest>=8.4.1,<9.0.0",
]

[tool.poetry]
packages = [{include = "cc_fastapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
